[package]
name = "id3-image-hash"
version = "0.1.0"
authors = ["Jade Auer <jade@trashwitch.dev"]
edition = "2018"
license = "MIT"
keywords = [ "id3", "mp3", "images" ]
categories = [ "command-line-utilities", "filesystem", "multimedia" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.9.6"
id3 = "0.6.2"
getopts = "0.2"
